--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookReviewHub</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0JB026B167"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BXNZ5MR5NW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0JB026B167');
+  gtag('config', 'G-BXNZ5MR5NW');
 </script>
   </head>
   <body>
